# quran-page-splitter

./: .gitignore  RADME.md  README.md  export_coordinates.py  image_cropper.html  image_utils.py  index.html  line_cutter.py  main.py  pyproject.toml  server.py  services.py
core/: aya_separator.py  classifier.py  config.py  coordinate_exporter.py  line_detector.py  page_processor.py  pipeline.py  quran_metadata.py
script/: line_cutter.py  pdf_to_pngs.py
static/css/: base.css  components.css  layout.css  style.css
static/js/: canvas.js  crop.js  drag.js  main.js  script.js  state.js  ui.js  upload.js
